<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.android.smartchef.RecipeDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_steps"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="0dp" />


    </LinearLayout>

</ScrollView>